fix spacing issue

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -110,7 +110,7 @@
 .footer-categories-box {
   display: flex;
   justify-content: flex-start;
-  gap: 60;
+  gap: 60 !important;
 }
 
 .footer-map {
